# blitz-croco-words

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  CLOUD.md  Dockerfile  README.md  check_spell.py  current.py  helpers.py  main.py  proper-current.py  pyproject.toml  requirements.txt  server.py
tests/: test_helpers.py  test_main.py
