[project]
name = "blitz-croco-words"
version = "0.1.0"
description = "Extract words from pptx files in a zip archive."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.128.0",
  "pyaspeller>=2.0.0",
  "python-multipart>=0.0.21",
  "python-pptx>=1.0.2",
  "uvicorn>=0.40.0",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov>=7.0.0",
  "ruff",
  "pylint",
]

[tool.ruff]
target-version = "py310"
line-length = 88
extend-exclude = ["tests"]

[tool.pylint.main]
ignore-paths = ["^tests/"]

[tool.pylint.messages_control]
disable = [
  "missing-module-docstring",
  "missing-function-docstring",
  "missing-class-docstring",
  "invalid-name",
  "import-error",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

